<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="isValid"
            type="Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/Label.Hint"
            android:text="@string/auth_title"
            app:layout_constraintBottom_toTopOf="@id/lblLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lblLogin"
            style="@style/InputText"
            app:layout_constraintBottom_toTopOf="@id/lblPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle">

            <EditText
                android:id="@+id/editLogin"
                style="@style/EditText"
                android:autofillHints="username"
                android:hint="@string/auth_login_hint"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lblPassword"
            style="@style/InputText"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblLogin">

            <EditText
                android:id="@+id/editPassword"
                style="@style/EditText"
                android:autofillHints="password"
                android:enabled="@{!isLoading}"
                android:hint="@string/auth_password_hint"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_x2"
            android:enabled="@{!isLoading &amp;&amp; isValid}"
            android:text="@string/button_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/lblPassword"
            app:layout_constraintStart_toStartOf="@id/lblPassword"
            app:layout_constraintTop_toBottomOf="@id/lblPassword" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/prbLoading"
            style="@style/ProgressBar.Loading"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_x12"
            android:src="@drawable/logo_it_energy"
            app:tint="@color/color_primary"
            app:layout_constraintBottom_toTopOf="@id/txtTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>